--- a/warranty_parts/templates/warranty_parts/add_issue.html
+++ b/warranty_parts/templates/warranty_parts/add_issue.html
@@ -1,16 +1,17 @@
 {% extends 'supply_info/base.html' %}
 
 {% block content %}
-{% if title %}
-<h3>{{ title }}</h3>
-{% else %}
-<h3>Nowe zgłoszenie</h3>
-<br>
-{% endif %}
-<form method="POST" class="post-form">{% csrf_token %}
-    {{ form.as_p }}
-    {{ form.errors }}
-    <button type="submit" class="save btn btn-default">Zapisz</button>
-</form>
 
+<div class="container">
+    {% if title %}
+        <h3>{{ title }}</h3>
+    {% else %}
+        <h3>Nowe zgłoszenie</h3>
+    {% endif %}
+    <form method="POST" class="post-form">{% csrf_token %}
+        {{ form.as_p }}
+        {{ form.errors }}
+        <button type="submit" class="save btn btn-default">Zapisz</button>
+    </form>
+</div>
 {% endblock %}
