--- a/supply_info/static/css/supply_info.css
+++ b/supply_info/static/css/supply_info.css
@@ -1,6 +1,7 @@
 /* =====Global ====*/
 * {
     font-family: Lato,sans-serif;
+    box-sizing: border-box;
 }
 
 /* ============== */
@@ -164,12 +165,79 @@ input[type=submit]:hover {
     background-color: #ddd;
 }
 
-input[type=text] {
+.search-input {
   box-sizing: border-box;
   /*border: 1px solid #555;*/
   outline: none;
 }
-input[type=text]:focus {
+.search-input:focus {
   background-color: #ddd;
 }
 
+/* ==== forms styling ============ */
+.container {
+ width: 25%;
+ float: left;
+ position: relative;
+ border-radius: 5px;
+ background-color: #f2f2f2;
+ padding: 20px;
+}
+.container h3 {
+    text-align: center;
+}
+
+.container input[type=text], input[type=number], select, textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.container label {
+  text-decoration: none;
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+
+.container input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+.container input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
