--- a/supply_info/templates/supply_info/admin_menu.html
+++ b/supply_info/templates/supply_info/admin_menu.html
@@ -1,4 +1,4 @@
-<li class='sub-menu'><a href='#admin'>Administracja<div class='fa fa-caret-down right'></div></a>
+<li class='sub-menu'><a href='#admin'><i class="fas fa-users-cog"></i>administracja<div class='fa fa-caret-down right'></div></a>
     <ul>
         <li><a href="{% url 'admin:index' %}">Admin panel</a></li>
         <li><a href="{% url 'supply_info:update_product_info' %}" >Zasil bazę</a></li>
