--- a/supply_info/templates/supply_info/filters_menu.html
+++ b/supply_info/templates/supply_info/filters_menu.html
@@ -1,4 +1,4 @@
-<li class='sub-menu'><a href='#produkts'>produkty<div class='fa fa-caret-down right'></div></a>
+<li class='sub-menu'><a href='#produkts'><i class="fas fa-store"></i>produkty<div class='fa fa-caret-down right'></div></a>
     <ul>
         <li><a href="{% url 'supply_info:machines_list' %}">Lista maszyn</a></li>
         <li><a href="{% url 'supply_info:products_list' sub_type='akcesoria_eti' %}" >ETI</a></li>
