--- a/supply_info/templates/supply_info/service_menu.html
+++ b/supply_info/templates/supply_info/service_menu.html
@@ -1,4 +1,4 @@
-<li class='sub-menu'><a href='#service'>Serwis<div class='fa fa-caret-down right'></div></a>
+<li class='sub-menu'><a href='#service'><i class="fas fa-wrench"></i>Serwis<div class='fa fa-caret-down right'></div></a>
     <ul>
         <li><a href="{% url 'warranty_parts:add_issue'%}">Nowe zgłoszenie</a></li>
     </ul>
