--- a/supply_info/templates/supply_info/machines_list.html
+++ b/supply_info/templates/supply_info/machines_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="machine_table">
+<div class="machine_table" style="margin-top: 70px;">
     <table border="1" id="machines_list_table">
         <tr>
             <th width="21%">Kod produktu</th>
