--- a/supply_info/templates/registration/login.html
+++ b/supply_info/templates/registration/login.html
@@ -1,24 +1,23 @@
 {% extends 'supply_info/base.html' %}
 
 {% block content %}
-{% if title %}
-<h3>{{ title }}</h3>
-{% else %}
-<h3>Zaloguj się</h3>
-{% endif %}
-<form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-        <tr>
-            <td>Login:</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>Hasło:</td>
-            <td>{{ form.password }}</td>
-        </tr>
-    </table>
-    <input type="submit" value="login">
+
+<div class="container">
+    {% if title %}
+        <h3>{{ title }}</h3>
+    {% else %}
+        <h3>Zaloguj się</h3>
+    {% endif %}
+    <form method="post" action="{% url 'login' %}">{% csrf_token %}
+        <label for="{{ form.username.id_for_label }}">Login:</label>
+        <input type="text" name="username" autofocus="" required="" id="id_username">
+        {{ form.username.errors }}
+        <label for="{{ form.password.id_for_label }}">Hasło:</label>
+        <input type="password" name="password" required="" id="id_password" style="width:100%; padding: 12 20px;"><br>
+        {{ form.password.errors }}
+    <button type="submit" value="login"class="save btn btn-default" style="margin: 20 0 0 0px;">Zaloguj</button>
     <input type="hidden" name="next" value="{{ next }}">
-</form>
+    </form>
+</div>
+
 {% endblock %}
