fix: table border style on firefox

--- a/supply_info/templates/supply_info/machines_list.html
+++ b/supply_info/templates/supply_info/machines_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="machine_table" style="margin-top: 70px;">
-    <table border="1" id="machines_list_table">
+    <table id="machines_list_table">
         <tr>
             <th width="21%">Kod produktu</th>
             <th width="6%">Dostępność</th>
@@ -58,3 +58,4 @@
 </div>
 
 {% endblock %}
+
