--- a/supply_info/templates/supply_info/products_list.html
+++ b/supply_info/templates/supply_info/products_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% include "supply_info/pagination.html" with page=products %}
 <div class="machine_table">
-    <table border="1" id="machines_list_table">
+    <table id="machines_list_table">
         <tr>
             <th width=30%>Kod produktu</th>
             <th width=10%>Dostępność</th>
