--- a/supply_info/templates/supply_info/warehouse_menu.html
+++ b/supply_info/templates/supply_info/warehouse_menu.html
@@ -2,5 +2,6 @@
     <ul>
         <li><a href="{% url 'serial_numbers:register_machines_in_warehouse'%}">dodaj maszyny z dostawy</a></li>
         <li><a href="{% url 'serial_numbers:save_shipment'%}">dodaj wysyłkę</a></li>
+        <li><a href="{% url 'admin:serial_numbers_shipmenttocustomer_changelist'%}">pokaż dokumenty wz</a></li>
     </ul>
 </li>
