--- a/supply_info/templates/supply_info/search_product.html
+++ b/supply_info/templates/supply_info/search_product.html
@@ -1,5 +1,5 @@
 {% extends 'supply_info/base.html' %}
-
+{% load group_tags %}
 {% block content %}
 
 {% if submitbutton == 'Szukaj' and request.GET.q != '' %}
@@ -45,7 +45,11 @@
                 <div id="extra_{{ forloop.parentloop.counter }}" style="display: none;">
                     <br>Opis: {{ result.name }}
                     <br>Cena hurtowa:  {% for item in result.price_lists.all %}
+                            {% if request.user|has_group:"Dystrybutorzy_B" %}
                                 {{ item.price_b }} zł NETTO
+                            {% else %}
+                                {{ item.price_c }} zł NETTO
+                            {% endif %}
                             {% endfor %}
                     <br>
                 </div>
