--- a/shipments/templates/shipments/new_shipment_form.html
+++ b/shipments/templates/shipments/new_shipment_form.html
@@ -8,15 +8,18 @@
     <div class="container">
         {{ formset.management_form }}
        <h2>Nowe zamówienie</h2>
-        <div class="row">
-            <div class="col-md-8"><input type="text" class="form-control" placeholder="Numer dostawy" name="shipment_number" required style="margin: 25 20px;" >
+        <div class="row" style="margin: 0 0 0 25px;">
+            <div class="col-md-8">{{ shipment_form.shipment_number }}</div>
+        </div>
+        <div class="row" style="margin: 0 0 0 25px;">
+            <div class="col-md-8">{{ shipment_form.country_of_origin }}</div>
         </div>
         <div class="row" id="shipment_prod_qty" style="margin: 0 0 0 25px;">
             {% for form in formset %}
                 {{ form.product.errors }}
                 <div class="col-md-6">{{ form.product }}</div>
                 {{ form.quantity.errors }}
-                <div class="col-md-2">{{ form.quantity }}</div>
+                <div class="col-md-3">{{ form.quantity }}</div>
             {% endfor %}
         </div>
         <button type="submit" class="save btn btn-default" style="margin: 15 35px;">Zapisz</button>
