--- a/shipments/templates/shipments/shipments_list.html
+++ b/shipments/templates/shipments/shipments_list.html
@@ -18,6 +18,14 @@
         <td></td>
         {% for shipment in shipments %}
             <td>
+                {{ shipment.get_country_of_origin_display }}
+            </td>
+        {% endfor %}
+    </tr>
+    <tr>
+        <td></td>
+        {% for shipment in shipments %}
+            <td>
                 ETA: {{ shipment.estimated_time_arrival }}
             </td>
         {% endfor %}
@@ -26,7 +34,7 @@
         <td width="21%"></td>
         {% for shipment in shipments %}
             <td>
-                Status: {{ shipment.shipment_status }}
+                Status: {{ shipment.get_shipment_status_display }}
             </td>
         {% endfor %}
     </tr>
@@ -37,13 +45,9 @@
                 <td>{{ qty }}</td>
             {% endfor %}
         </tr>
-
-
     {% endfor %}
-
     </table>
 </div>
-
 
 {% endblock %}
 
