adds 'edit' button

--- a/supply_info/templates/supply_info/alerts_list.html
+++ b/supply_info/templates/supply_info/alerts_list.html
@@ -20,7 +20,7 @@
                     <td>{{ alert.less_or_equal|less_or_equal_bool_to_text }}</td>
                     <td>{{ alert.qty_alert_lvl }}</td>
                     <td>{{ alert.updated }}</td>
-                    <td>buttons</td>
+                    <td><button type="submit" class="save btn btn-default" >Edytuj</button></td>
                 </tr>
             {% endfor %}
         </tbody>
