--- a/supply_info/templates/supply_info/products_list.html
+++ b/supply_info/templates/supply_info/products_list.html
@@ -10,6 +10,7 @@
             <th width=11%>Cena katalogowa (brutto)</th>
             <th width=24%>Kolejna dostawa</th>
             <th>Uwagi</th>
+            <th> </th>
         </tr>
         {% for product in products %}
         <tbody id="machines_search_table_body">
@@ -35,17 +36,23 @@
                 {% endfor %}
                 <td>{{ product.next_shipment|default_if_none:"" }}</td>
                 <td>{{ product.additional_info|default_if_none:"" }}</td>
-                <td width="1%"><a href="#" id="show_{{ forloop.parentloop.counter }}" ><span class="glyphicon glyphicon-plus"></span></a></td>
+                <td width="1%">
+                    <a href="#" id="show_{{ forloop.parentloop.counter }}" ><span class="glyphicon glyphicon-plus"></span></a>
+                </td>
             </form>
         </tr>
         <tr>
-            <td colspan="5">
-                <div id="extra_{{ forloop.parentloop.counter }}" style="display: none;">
-                    <br>Opis: {{ product.name }}
+            <td colspan="6">
+                <div class="row" id="extra_{{ forloop.parentloop.counter }}" style="display: none;">
+                    <div class="col-md-9">
+                    Opis: {{ product.name }}
                     <br>Cena hurtowa:  {% for item in product.price_lists.all %}
                                 {{ item.price_b }} zł NETTO
                             {% endfor %}
-                    <br>
+                    </div>
+                    <div class="col-md-3" align="right">
+                        <a href="{% url 'supply_info:alert_add_view' product_pk=product.id  %}"><i class="fas fa-bell" style="color:#e13e2f; padding: 20 20; font-size: 1.3em;"></i></a>
+                    </div>
                 </div>
             </td>
         </tr>
