--- a/supply_info/templates/supply_info/search_product.html
+++ b/supply_info/templates/supply_info/search_product.html
@@ -12,6 +12,7 @@
             <th width=11%>Cena katalogowa (brutto)</th>
             <th width=24%>Kolejna dostawa</th>
             <th>Uwagi</th>
+            <th></th>
         </tr>
         {% for result in results %}
         <tbody id="machines_search_table_body">
@@ -49,17 +50,17 @@
             </form>
         </tr>
         <tr>
-            <td colspan="5">
-                <div id="extra_{{ forloop.parentloop.counter }}" style="display: none;">
-                    <br>Opis: {{ result.name }}
+            <td colspan="6">
+                <div class="row" id="extra_{{ forloop.parentloop.counter }}" style="display: none;">
+                    <div class="col-md-9">
+                    Opis: {{ result.name }}
                     <br>Cena hurtowa:  {% for item in result.price_lists.all %}
-                            {% if request.user|has_group:"Dystrybutorzy_B" %}
                                 {{ item.price_b }} zł NETTO
-                            {% else %}
-                                {{ item.price_c }} zł NETTO
-                            {% endif %}
                             {% endfor %}
-                    <br>
+                    </div>
+                    <div class="col-md-3" align="right">
+                        <a href="{% url 'supply_info:alert_add_view' product_pk=result.id  %}"><i class="fas fa-bell" style="color:#e13e2f; padding: 20 20; font-size: 1.3em;"></i></a>
+                    </div>
                 </div>
             </td>
         </tr>
